--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/">
         <file alias="main.qml">contents/ui/main.qml</file>
         <file alias="browser_data.qml">contents/ui/browser_data.qml</file>
+        <file alias="uuid_generator.qml">contents/ui/uuid_generator.qml</file>
         <file alias="Functions.js">contents/ui/Functions.js</file>
     </qresource>
 </RCC>
